@@ -9,6 +9,8 @@
 #define HAVE_STDLIB_H
 #define HAVE_STRING_H
 
+#define ASMALIGN_BALIGN 1
+
 /* We want some frame index, eh? */
 #define FRAME_INDEX 1
 #define INDEX_SIZE 1000
